# kymion

./: .gitignore  Readme.md  pyproject.toml  setup.py
examples/: process_pool_executor.py
src/kymion/: __init__.py  core.py  demo.py
src/kymion/handlers/: logging.py  queue.py  rich.py  tqdm.py
tests/: test_kymion.py  test_logging.py  test_multiprocessing.py
